# new-song-magician

./: .gitignore  AGENTS.md  Justfile  LICENSE  README.md  main.py  pyproject.toml  run-from-cron.sh
new_song_magician/: cli.py  client.py  gmail.py  models.py  reporting.py
tests/: conftest.py  test_cli.py  test_client.py  test_gmail.py  test_reporting.py
